# flamapy-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
 flamapy_mcp/: __main__.py
flamapy_mcp/: __init__.py  __main__.py  server.py
